@@ -1,3 +1,8 @@
+2008-04-03  Kouhei Sutou  <kou@cozmixng.org>
+
+	* pkg-config.rb, test/test_pkg_config.rb: support
+	--with-override-variables extconf.rb option.
+
 2008-04-01  Kouhei Sutou  <kou@cozmixng.org>
 
 	* samples/text2.rb: don't use block variable assignment.
